--- a/navigation/navigation.css
+++ b/navigation/navigation.css
@@ -22,3 +22,9 @@ ul#navigation li {
 	cursor: pointer;
 	margin: 0 1rem;
 }
+ul#navigation li:first-child {
+	margin: 0 1rem 0 0;
+}
+ul#navigation li:last-child {
+	margin: 0 0 0 1rem;
+}
